# xeta-backend

./: .gitignore  Cargo.toml
migrations/: 20240101000000_create_users.sql  20240101000001_add_keys_and_messages.sql  20240101000003_add_push_token.sql
src/: main.rs
