[package]
name = "xeta-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
bcrypt = "0.15"
jsonwebtoken = "9"
tower-http = { version = "0.5", features = ["fs"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
sha1 = "0.10"
